--- a/DoAn2/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/DoAn2/app/src/main/res/layout/header_navigation_drawer.xml
@@ -8,9 +8,9 @@
     android:id="@+id/toolbar"
     android:gravity="center_vertical">
     <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/menu"/>
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/logoapp_removebg_preview"/>
 
     <TextView
         android:layout_width="0dp"
