--- a/DoAn2/app/src/main/res/menu/navigation_drawer.xml
+++ b/DoAn2/app/src/main/res/menu/navigation_drawer.xml
@@ -25,6 +25,10 @@
         android:title="">
         <menu>
             <item
+                android:id="@+id/account"
+                android:icon="@drawable/baseline_switch_account_24"
+                android:title="Account"/>
+            <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/baseline_logout_24"
                 android:title="Logout"/>
