--- a/DoAn2/app/src/main/res/layout/activity_main_menu.xml
+++ b/DoAn2/app/src/main/res/layout/activity_main_menu.xml
@@ -26,20 +26,25 @@
         </com.google.android.material.appbar.AppBarLayout>-->
 
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/yellow"
             android:elevation="4dp"
-            android:id="@+id/toolbar"
-            app:titleTextColor="@color/black"
-            app:title="Main Menu"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:title="Main Menu"
+            app:titleTextColor="@color/black" />
 
         <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/frame_layout"/>
+            android:id="@+id/frame_layout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_alignTop="@id/toolbar"
+            android:paddingTop="60dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true" />
 
 
     </RelativeLayout>
