--- a/DoAn2/app/src/main/res/layout/activity_forget.xml
+++ b/DoAn2/app/src/main/res/layout/activity_forget.xml
@@ -16,13 +16,14 @@
         >
 
         <ImageButton
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:id="@+id/imgbtn_back"
             app:layout_constraintRight_toLeftOf="@id/imlogo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="10dp"
             android:background="@drawable/back_black_2"/>
 
         <ImageView
