--- a/DoAn2/app/src/main/res/layout/activity_forget.xml
+++ b/DoAn2/app/src/main/res/layout/activity_forget.xml
@@ -35,12 +35,27 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/outlinedTextFieldEmail"
+            android:layout_width="370dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:hint="Email">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="370dp"
+                android:layout_height="wrap_content" />
+        </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             style="@style/Widget.Material3.Button.TonalButton"
-            android:id="@+id/filledTonalButtonSignIn"
+            android:id="@+id/filledTonalButtonChangePass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign Up"
+            android:text="Reset a password"
             android:textSize="15dp"
             android:textStyle="bold"
             android:backgroundTint="@color/bluelight"
@@ -48,73 +63,34 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldVerifyPassword"
+            app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldEmail"
             />
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/outlinedTextFieldUserName"
+        <!--<com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/outlinedTextFieldEmail"
             android:layout_width="370dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:hint="Username">
+            android:hint="Email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="370dp"
                 android:layout_height="wrap_content"
                 />
 
-        </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>-->
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/outlinedTextFieldPassword"
-            android:layout_width="370dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/spinner_SecurityQuestion"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:passwordToggleEnabled="true"
-            android:hint="Enter your new password">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="370dp"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/outlinedTextFieldVerifyPassword"
-            android:layout_width="370dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldPassword"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:passwordToggleEnabled="true"
-            android:hint="Verify your new password">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="370dp"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
 
-        <Spinner
-            android:layout_width="370dp"
-            android:layout_height="40dp"
-            android:id="@+id/spinner_SecurityQuestion"
-            app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldUserName"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:passwordToggleEnabled="true"
-            android:autofillHints="Enter your verify question"
-            android:background="@color/yellow"/>
+
+
 
 
 
