--- a/DoAn2/app/src/main/res/layout/activy_main_signup.xml
+++ b/DoAn2/app/src/main/res/layout/activy_main_signup.xml
@@ -37,7 +37,7 @@
 
         <Button
             style="@style/Widget.Material3.Button.TonalButton"
-            android:id="@+id/filledTonalButtonSignIn"
+            android:id="@+id/filledTonalButtonSignUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sign Up"
@@ -48,7 +48,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@id/spinner_SecurityQuestion"
+            app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldEmail"
             />
 
 
@@ -105,16 +105,19 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Spinner
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/outlinedTextFieldEmail"
             android:layout_width="370dp"
-            android:layout_height="40dp"
-            android:id="@+id/spinner_SecurityQuestion"
-            app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldVerifyPassword"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldVerifyPassword"
             app:layout_constraintEnd_toEndOf="parent"
-            app:passwordToggleEnabled="true"
-            android:autofillHints="Enter your verify question"
-            android:background="@color/yellow"/>
+            android:hint="Email">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="370dp"
+                android:layout_height="wrap_content" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
 
