--- a/DoAn2/app/src/main/res/layout/activity_account.xml
+++ b/DoAn2/app/src/main/res/layout/activity_account.xml
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="TÊN"
+                android:text="NAME"
                 android:textSize="25dp"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/imageView"
@@ -174,7 +174,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Thay đổi"
+                    android:text="Change"
                     android:paddingEnd="20dp"
                     android:textSize="18dp"
                     android:gravity="end"/>
