--- a/DoAn2/app/src/main/res/layout/activity_testgrammar.xml
+++ b/DoAn2/app/src/main/res/layout/activity_testgrammar.xml
@@ -28,4 +28,178 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="30dp"/>
+
+  <androidx.cardview.widget.CardView
+      android:id="@+id/card1"
+      android:layout_width="match_parent"
+      android:layout_height="120dp"
+      android:layout_marginTop="20dp"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginStart="20dp"
+      android:layout_marginEnd="20dp"
+      app:cardCornerRadius="20dp"
+      app:cardElevation="40dp"
+      app:layout_constraintTop_toBottomOf="@id/textView3">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+      <TextView
+          android:id="@+id/textView4"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="50dp"
+          android:layout_marginTop="22dp"
+          android:text="Questions"
+          android:textStyle="bold"
+          android:textSize="20dp"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
+
+      <TextView
+          android:id="@+id/textViewQuesCount"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="10dp"
+          android:text="2/10"
+          android:textSize="25sp"
+          android:textStyle="bold"
+          app:layout_constraintEnd_toEndOf="@+id/textView4"
+          app:layout_constraintStart_toStartOf="@+id/textView4"
+          app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+      <com.google.android.material.progressindicator.CircularProgressIndicator
+          android:id="@+id/progressBarQuesTime"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginEnd="50dp"
+          android:indeterminate="false"
+          android:max="300"
+          android:progress="300"
+          app:indicatorSize="80dp"
+          app:trackThickness="8dp"
+          app:layout_constraintBottom_toBottomOf="@+id/textViewQuesCount"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintTop_toTopOf="@+id/textView4"
+          app:layout_constraintVertical_bias="0.444" />
+
+      <TextView
+          android:id="@+id/textViewQuesTime"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="30s"
+          android:textSize="20dp"
+          app:layout_constraintBottom_toBottomOf="@+id/progressBarQuesTime"
+          app:layout_constraintEnd_toEndOf="@+id/progressBarQuesTime"
+          app:layout_constraintStart_toStartOf="@+id/progressBarQuesTime"
+          app:layout_constraintTop_toTopOf="@+id/progressBarQuesTime" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+  </androidx.cardview.widget.CardView>
+
+  <TextView
+      android:id="@+id/textViewQues"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="40dp"
+      android:text="@string/question1"
+      android:textSize="20dp"
+      android:textStyle="bold"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginStart="30dp"
+      android:layout_marginEnd="30dp"
+      app:layout_constraintTop_toBottomOf="@id/card1" />
+
+  <Button
+      android:id="@+id/btnAns1"
+      style="?attr/materialButtonOutlinedStyle"
+      android:layout_width="250dp"
+      android:layout_height="wrap_content"
+      android:text="A. That"
+      android:layout_marginTop="80dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textViewQues" />
+
+  <Button
+      android:id="@+id/btnAns2"
+      style="?attr/materialButtonOutlinedStyle"
+      android:layout_width="250dp"
+      android:layout_height="wrap_content"
+      android:text="B. Which"
+      android:layout_marginTop="15dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/btnAns1" />
+
+  <Button
+      android:id="@+id/btnAns3"
+      style="?attr/materialButtonOutlinedStyle"
+      android:layout_width="250dp"
+      android:layout_height="wrap_content"
+      android:text="C. What"
+      android:layout_marginTop="15dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/btnAns2" />
+
+  <Button
+      android:id="@+id/btnAns4"
+      style="?attr/materialButtonOutlinedStyle"
+      android:layout_width="250dp"
+      android:layout_height="wrap_content"
+      android:text="D. Where"
+      android:layout_marginTop="15dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/btnAns3" />
+
+  <Button
+      android:id="@+id/btnBackQues"
+      style="@style/Widget.Material3.Button.ElevatedButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="20dp"
+      android:layout_marginBottom="20dp"
+      android:text="Back"
+      app:icon="@drawable/back"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toStartOf="parent" />
+
+  <Button
+      android:id="@+id/btnNextQues"
+      style="@style/Widget.Material3.Button.ElevatedButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginEnd="20dp"
+      android:layout_marginBottom="20dp"
+      android:text="Next"
+      app:icon="@drawable/next"
+      app:iconGravity="end"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent" />
+
+  <Button
+      android:id="@+id/btnSubmit"
+      style="@style/Widget.Material3.Button.ElevatedButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Submit"
+      app:layout_constraintStart_toEndOf="@id/btnBackQues"
+      app:layout_constraintEnd_toStartOf="@id/btnNextQues"
+      app:layout_constraintTop_toTopOf="@id/btnNextQues"/>
+
+  <com.google.android.material.progressindicator.LinearProgressIndicator
+      android:id="@+id/progressQues"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:layout_constraintBottom_toTopOf="@+id/btnNextQues"
+      android:layout_marginBottom="20dp"
+      android:layout_marginStart="15dp"
+      android:layout_marginEnd="15dp"
+      android:max="100"
+      android:progress="20"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
