--- a/PJ/Project/app/src/main/res/layout/activity_test_result.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_test_result.xml
@@ -10,13 +10,21 @@
         android:id="@+id/btnbacktohome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
         android:text="Back to Home"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+    <Button
+        android:id="@+id/buttonViewResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Result"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="50dp"/>
-
+        android:layout_marginBottom="80dp"
+        app:layout_constraintBottom_toTopOf="@id/btnbacktohome" />
     <TextView
         android:id="@+id/tvresult"
         android:layout_width="wrap_content"
@@ -96,31 +104,30 @@
         android:id="@+id/group3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toBottomOf="@id/group2">
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/group2"
+        tools:layout_editor_absoluteX="10dp">
 
         <TextView
             android:id="@+id/tvNotAns"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:text="Not Answered Question:"
             android:paddingStart="20dp"
+            android:text="Not Answered Question:"
             android:textSize="18dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvNumNotAns"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="0"
+            android:gravity="end"
             android:paddingEnd="20dp"
-            android:textSize="18dp"
-            android:gravity="end"/>
+            android:text="0"
+            android:textSize="18dp" />
     </LinearLayout>
 
 
@@ -148,4 +155,6 @@
         app:layout_constraintEnd_toEndOf="@+id/progressBarQuesTime"
         app:layout_constraintStart_toStartOf="@+id/progressBarQuesTime"
         app:layout_constraintTop_toTopOf="@+id/progressBarQuesTime" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
