--- a/PJ/Project/app/src/main/res/layout/activity_leader_board.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_leader_board.xml
@@ -81,4 +81,13 @@
             android:scrollbars="vertical"/>
 
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/btnNotification"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
