--- a/PJ/Project/app/src/main/res/layout/activity_test_result.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_test_result.xml
@@ -106,6 +106,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintTop_toBottomOf="@id/group2"
         tools:layout_editor_absoluteX="10dp">
 
