--- a/PJ/Project/app/src/main/res/layout/activity_account.xml
+++ b/PJ/Project/app/src/main/res/layout/activity_account.xml
@@ -228,7 +228,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="10"
+                    android:text=""
                     android:paddingEnd="20dp"
                     android:textSize="18dp"
                     android:gravity="end"/>
@@ -266,9 +266,8 @@
                 <ImageView
                     android:id="@+id/imageView4"
                     android:layout_width="30dp"
-                    android:layout_height="75dp"
+                    android:layout_height="80dp"
                     android:layout_weight="1"
-                    android:background="@drawable/badge"
                     android:scaleType="centerCrop"
                     android:gravity="end"/>
             </LinearLayout>
